--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,23 +2,25 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title="Portfolio | Your Name" description="自己紹介">
-  <main class="container" style="padding: 40px 0;">
-    <h1>長野由依</h1>
-    <p>筑波大学 情報メディア創成学類に在学中。
-    Webアプリ開発（Flask + MongoDB + Redis）や生成モデル（Diffusion, UNet）の研究に関心があります。</p>
+<BaseLayout title="Portfolio | Yui Nagano" description="自己紹介">
+  <main class="container" style="padding: 10px 0;">
+    <h1>Portfolio</h1>
+    <h2>Infomation</h2>
+    <strong>長野 由依(Yui Nagano)</strong><br /><br />
+    筑波大学 情報学群情報メディア創成学類 B3
 
-    <h2>スキル</h2>
+    <h2>Affiliations</h2>
     <ul>
-      <li>Python, Flask, FastAPI</li>
-      <li>MongoDB, MySQL, Redis</li>
-      <li>HTML, CSS, JavaScript, React</li>
+      <li>筑波大学 宿舎祭実行委員</li>
+      <li>Realjam(筑波大学ダンスサークル)</li>
     </ul>
 
-    <h2>リンク</h2>
+    <h2>Accounts</h2>
     <ul>
       <li><a href="https://github.com/nako170148" target="_blank">GitHub</a></li>
-      <li><a href="yui.nako1205@gmail.com">メール</a></li>
     </ul>
+
+    <h2>Contact</h2>
+    <ul>yui.nako1205@gmail.com</ul>
   </main>
 </BaseLayout>
