--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </p>
     </section>
 
-    <section class=""card">
+    <section class="card">
         <h2>Past</h2>
         <p>
             2017~2023 洗足学園中学高等学校75期生 <br />
@@ -49,11 +49,11 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       <h2>Affiliations</h2>
       <ul>
         <li>
-          筑波大学 宿舎祭実行委員　
+          筑波大学 宿舎祭実行委員
           <a href="https://yadokarisai.com/" target="_blank" rel="noopener noreferrer">HP</a>
         </li>
         <li>
-          Realjam (筑波大学ダンスサークル)　
+          Realjam (筑波大学ダンスサークル)
           <a href="https://www.instagram.com/realjam.tkb/" target="_blank" rel="noopener noreferrer">Instagram</a>
         </li>
       </ul>
