--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <h1 style="font-size:2rem; font-weight:bold; margin-bottom:1.5rem;">Portfolio</h1>
 
     <section class="card">
-      <h2>Infomation</h2>
+      <h2>Information</h2>
       <p>
         <strong>長野 由依 (Yui Nagano)</strong><br /><br />
         筑波大学 情報学群情報メディア創成学類 B3
